--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    
+        <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    
 
     <application
         android:allowBackup="true"
@@ -20,7 +24,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="in.manish.boundedservice.MainActivity"
+            android:name="in.manish.boundedservice.calllog.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" >
@@ -31,7 +35,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name="MyService" />
+        <service android:name="in.manish.boundedservice.calllog.CallLogService" />
     </application>
 
 </manifest>
